# llm-analyst

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  registry.py
docs/: brief.md
docs/adr/: 0001-semantic-layer-consumption-mechanism.md  0002-analyst-core-query-planning.md  0003-guardrail-strategy.md  0004-eval-harness.md  0005-demo-ui.md
evals/: question_set.yaml
platform/: PLATFORM_TAG  dbt_project.yml  profiles.yml
platform/models/backing/: fct_loan_lifecycle.sql  fct_loan_origination.sql  fct_payment.sql  mart_risk_prepayment_speed.sql  mart_risk_vintage_curve.sql
platform/models/metricflow/: metricflow_time_spine.sql
platform/models/semantic/: _sem_lifecycle.yml  _sem_originations.yml  _sem_payments.yml  _sem_prepayment.yml  _sem_vintage.yml
src/llm_analyst/: __init__.py
src/llm_analyst/analyst/: __init__.py  analyst.py  composer.py  models.py  planner.py
src/llm_analyst/evals/: __init__.py  loader.py  models.py  runner.py  scorer.py
src/llm_analyst/guardrail/: __init__.py  classifier.py  guarded_analyst.py  models.py
src/llm_analyst/llm/: __init__.py  client.py  mock.py
src/llm_analyst/semantic_client/: __init__.py  client.py  constants.py  models.py
standards/: clean-sql.md
tests/: conftest.py  test_analyst.py  test_app_logic.py  test_client.py  test_eval_regression.py  test_guardrail.py  test_planner.py  test_planner_live.py
tests/fixtures/: FIXTURE_SHA
tests/fixtures/plans/: q001_origination_by_product.json  q002_origination_scalar.json  q003_default_rate_by_credit_tier.json  q004_default_rate_scalar.json  q005_avg_balance_by_product.json  q006_avg_balance_scalar.json  q007_portfolio_yield_by_product.json  q008_portfolio_yield_scalar.json  q009_delinquency_rate_by_credit_tier.json  q010_delinquency_rate_scalar.json  q011_cpr_by_product.json  q012_cpr_scalar.json  q013_vintage_loss_by_cohort.json  q014_vintage_loss_scalar.json
